# util

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
debian/: changelog  control  copyright  libkora-util-dev.links  libkora-util1.install  libleonidia-util-dev.links  libleonidia-util1.install
doc/: Doxyfile.in
include/kora/: config.hpp  dynamic.hpp  platform.hpp  stdatomic.hpp  utility.hpp
include/kora/config/: config.hpp  converters.hpp  error.hpp  parser.hpp
include/kora/dynamic/: constructors.hpp  converters.hpp  detail.hpp  dynamic.hpp  dynamic.impl  dynamic.inl  error.hpp  json.hpp  object.hpp
include/kora/utility/: lazy_false.hpp  make_unique.hpp  noexcept.hpp  noncopyable.hpp  noreturn.hpp  nullptr.hpp  platform.hpp  sfinae.hpp  stdatomic.hpp  type_traits.hpp  underlying_type.hpp  visibility.hpp
include/leonidia/: config.hpp  dynamic.hpp  platform.hpp  stdatomic.hpp  utility.hpp
include/leonidia/dynamic/: constructors.hpp  converters.hpp  detail.hpp  dynamic.hpp  error.hpp  object.hpp
src/: config.cpp  dynamic.cpp
src/config/: config.cpp  error.cpp  parser.cpp
src/dynamic/: dynamic.cpp  error.cpp  json.cpp  object.cpp
tests/: CMakeLists.txt  config.cpp  dynamic.cpp  dynamic_constructor.cpp  dynamic_json.cpp
tests/config/: config.cpp  parser.cpp
tests/dynamic/: constructor.cpp  converter.cpp  dynamic.cpp  dynamic_constructor.cpp  dynamic_converter.cpp  json.cpp  object.cpp
tests/utility/: lazy_false.cpp  make_unique.cpp  noexcept.cpp  noreturn.cpp  nullptr.cpp  sfinae.cpp  stdatomic.cpp  type_traits.cpp  underlying_type.cpp
travis/: before_install.sh  install.sh
